--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/carrat/nytreact.git"
   },
-  "author": "",
+  "author": "Andrew Carr",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/carrat/nytreact/issues"
@@ -19,11 +19,20 @@
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.15.2",
+    "core-js": "^2.4.0",
     "express": "^4.14.0",
     "mongoose": "^4.7.2",
+    "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "request": "^2.79.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.13.1"
   }
 }
