--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
     "express": "^4.14.0",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
